@@ -92,6 +92,7 @@ Version 0.91.0:
 - 0.90.1 regression: PMAP was returning bad values for func values of 0 or 1.
 - #701: fbc didn't escape \ as \\ in @files (response files) sometimes used when invoking ld
 - Win32 fbc will now avoid hitting Win32 command line length limits when invoking ld with a long command line, by using "ld @file" (response files)
+- #713: gfxlib2 crashed when closing and re-opening an X11 OpenGL graphics screen
 
 
 Version 0.90.1:
